--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation("javax.servlet:jstl")
     implementation("org.apache.tomcat.embed:tomcat-embed-jasper")
+    implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
 }
