--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -3,7 +3,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+
+
         classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE"
+
     }
 }
 
@@ -33,5 +36,9 @@ dependencies {
     implementation("org.apache.tomcat.embed:tomcat-embed-jasper")
     implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
 
-    compile("org.springframework.boot:spring-boot-devtools")
+    implementation("org.springframework.boot:spring-boot-devtools")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation 'mysql:mysql-connector-java'
+    implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.19'
+
 }
