--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-server.jsp-servlet.init-parameters.development=true
+spring.thymeleaf.cache=false  
+spring.devtools.livereload.enabled = true
+spring.devtools.restart.exclude=static/**,public/**
 
+# DataBase Setting
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/toktok?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=toktok
+spring.datasource.password=WaglToktok201*
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
