이메일 로그인 기능 추가 회원가입 기능(이메일) 추가 프로젝트 등록  기능 추가 프로젝트 참여 기능 추가

--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -30,6 +30,8 @@ targetCompatibility = 1.8
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-security")
+
     testCompile("junit:junit")
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation("javax.servlet:jstl")
