--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -31,6 +31,8 @@ targetCompatibility = 1.8
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.boot:spring-boot-starter-mail")
+    implementation("org.springframework.boot:spring-boot-starter-freemarker")
 
     testCompile("junit:junit")
     implementation 'com.google.code.gson:gson:2.8.4'
