--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -22,10 +22,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #show sql statement
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=none
 
 #show sql values
-logging.level.org.hibernate.type.descriptor.sql=debug
+logging.level.org.hibernate.type.descriptor.sql=none
 
 
 
