소셜 로그인 기능 추가

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -27,5 +27,30 @@ logging.level.org.hibernate.SQL=none
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=none
 
+# 페이스북
+facebook.client.clientId: 662344524104222
+facebook.client.clientSecret: 330f0dd5028a616af689c674c6213411
+facebook.client.accessTokenUri: https://graph.facebook.com/oauth/access_token
+facebook.client.userAuthorizationUri: https://www.facebook.com/dialog/oauth
+facebook.client.tokenName: oauth_token
+facebook.client.authenticationScheme: query
+facebook.client.clientAuthenticationScheme: form
+facebook.client.scope: email,public_profile,user_photos
+facebook.resource.userInfoUri: https://graph.facebook.com/me?fields=id,name,email,link,picture
 
+# 카카오
+kakao.client.clientId: bd8073c50c74b700fd519ce6d394b64e
+kakao.client.clientSecret: tdl5NOPnjavIg76bkf9WU78WwAbGEdKo
+kakao.client.accessTokenUri: https://kauth.kakao.com/oauth/token
+kakao.client.userAuthorizationUri: https://kauth.kakao.com/oauth/authorize
+kakao.client.redirectUrl: http://localhost:8080/users/auth/kakao/authorize
+kakao.resource.userInfoUri: https://kapi.kakao.com/v2/user/me
 
+# 트위터
+twitter.clientId: pbxiHFivUhAEynFV2VHThrRgB
+twitter.clientSecret: LM3lJ5vIP4a5E7dVm6p96ALcO5WZ64tZK03ib0A0RD0irA0wRj
+twitter.client.accessTokenUri: https://api.twitter.com/oauth/access_token
+twitter.client.userAuthorizationUri: https://api.twitter.com/oauth/authorize
+twitter.client.clientAuthenticationScheme: form
+twitter.client.redirectUrl: http://127.0.0.1:8080/users/auth/twitter/authorize
+twitter.resource.userInfoUri: https://api.twitter.com/1.1/users/show.json
