--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'mysql:mysql-connector-java'
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.19'
 
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
 }
