아마존 S3 작업 추가 및 관리자 API 추가중

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -54,3 +54,8 @@ twitter.client.userAuthorizationUri: https://api.twitter.com/oauth/authorize
 twitter.client.clientAuthenticationScheme: form
 twitter.client.redirectUrl: http://127.0.0.1:8080/users/auth/twitter/authorize
 twitter.resource.userInfoUri: https://api.twitter.com/1.1/users/show.json
+
+cloud.aws.credentials.accessKey: AKIAJ7M2V67PDC7VIFGQ
+cloud.aws.credentials.secretKey: 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
+cloud.aws.region: ap-northeast-2
+cloud.aws.s3.bucket: wagltoktok
