--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'mysql:mysql-connector-java'
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.19'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-aws-context
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws-core', version: '1.2.2.RELEASE'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
+    implementation("commons-io:commons-io:2.4")
+//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
 }
