--- a/spring-boot/package.json
+++ b/spring-boot/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "default-passive-events": "^1.0.10",
     "events-polyfill": "^2.0.5",
     "nodelist-foreach-polyfill": "^1.2.0",
     "promise-polyfill": "^7.1.2",
