--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
 
     implementation("org.springframework.boot:spring-boot-devtools")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+//    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'mysql:mysql-connector-java'
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.19'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-aws-context
@@ -55,6 +55,9 @@ dependencies {
 
     implementation("commons-io:commons-io:2.4")
 //    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
-    compile "org.projectlombok:lombok:1.16.6"
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
+    implementation "org.projectlombok:lombok:1.16.6"
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.4.RELEASE'
+
 }
