--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -59,3 +59,6 @@ cloud.aws.credentials.accessKey: AKIAJ7M2V67PDC7VIFGQ
 cloud.aws.credentials.secretKey: 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
 cloud.aws.region: ap-northeast-2
 cloud.aws.s3.bucket: wagltoktok
+
+# hibernate interceptor
+spring.jpa.properties.hibernate.ejb.interceptor=controller.HibernateInterceptor
