검색기능 추가. 이미지 url 가공 추가

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 logging.level.org.hibernate.SQL=none
 
 #show sql values
-logging.level.org.hibernate.type.descriptor.sql=none
+logging.level.org.hibernate.type.descriptor.sql=info
 
 # 페이스북
 facebook.client.clientId: 476383872798892
