mainslide 이미지 경로 수정

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8080
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 spring.thymeleaf.cache=false  
@@ -22,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #show sql statement
-logging.level.org.hibernate.SQL=none
+logging.level.org.hibernate.SQL=info
 
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=info
