--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'io.spring.dependency-management'
 
 bootJar {
     baseName = 'assembly-toktok'
-    version =  '0.0.1'
+    version =  '0.0.2'
 }
 
 repositories {
@@ -33,12 +33,12 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-mail")
     implementation("org.springframework.boot:spring-boot-starter-freemarker")
-    compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.0.1.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-social-twitter', version: '1.5.14.RELEASE'
+    implementation group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.0.1.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-social-twitter', version: '1.5.14.RELEASE'
 
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.7.4'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.7.4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.6'
 
     testCompile("junit:junit")
     implementation 'com.google.code.gson:gson:2.8.4'
@@ -47,7 +47,7 @@ dependencies {
     implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
 
     implementation("org.springframework.boot:spring-boot-devtools")
-//    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'mysql:mysql-connector-java'
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.19'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-aws-context
@@ -58,6 +58,5 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
     implementation "org.projectlombok:lombok:1.16.6"
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.4.RELEASE'
 
 }
