메인 슬라이드 등록 수정

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -63,3 +63,7 @@ cloud.aws.s3.bucket: wagltoktok
 
 # hibernate interceptor
 spring.jpa.properties.hibernate.ejb.interceptor=controller.HibernateInterceptor
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+
